--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   provider: ^6.1.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  exception_helper: ^1.0.0
+  image_picker: ^1.1.2
+  intl: ^0.19.0
   
 
 dev_dependencies:
